# service-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  WORKFLOW.md  key.der  tests.rest
.doc/: DOCS.md
.reading/: READING.md
auth/: Cargo.toml  README.md
auth/src/: session.rs
auth/src/session/: logic.rs  manager.rs  mod.rs
configuration/: base.yaml
foundation/: Cargo.toml
foundation/src/: id.rs  key.rs  lib.rs
libsvc/: Cargo.toml  key.der
libsvc/src/: lib.rs
libsvc/src/domain/: mod.rs
libsvc/src/domain/core/: fields.rs
libsvc/src/domain/user/: logic.rs  mod.rs  service.rs  user.rs
libsvc/src/domain/user/repository/: memory.rs  mod.rs
libsvc/src/domain/user/session/: manager.rs  mod.rs  session.rs
libsvc/src/foundation/: id.rs  key.rs  mod.rs  validation.rs
svc/: Cargo.toml  key.der
svc/src/: application.rs  configuration.rs  lib.rs  main.rs  store.rs  telemetry.rs
svc/src/rest/: api.rs  jwt.rs  mod.rs  user_handlers.rs  user_requests.rs
svc/src/rest/middleware/: basic_auth.rs  jwt_auth.rs  mod.rs
svc/src/rest/v1/: debug_handlers.rs  mod.rs  user_handlers.rs
user/: Cargo.toml
user/src/: lib.rs  logic.rs  service.rs
user/src/repository/: memory.rs  mod.rs
