[package]
name = "svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
libsvc = { path = "../libsvc", features = ["registration"] }
log = "0.4.17"
serde = { version = "1.0.162", features = ["serde_derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
tokio = { version = "1.28.0", features = ["full"] }

[[bin]]
name = "svc"
