[package]
name = "svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
config = { version = "0.13.3", features = ["yaml"] }
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
libsvc = { path = "../libsvc", features = ["registration"] }
log = "0.4.17"
secrecy = { version = "0.8.0", features = ["serde"]}
serde = { version = "1.0.162", features = ["serde_derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
sys-info = "0.9.1"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"]}

[[bin]]
name = "svc"
